Fixed spacing and multiline text field

--- a/src/ComponentsCSS/ContactPageCSS/ContactForm.css
+++ b/src/ComponentsCSS/ContactPageCSS/ContactForm.css
@@ -29,8 +29,8 @@
 
 .contact-form-divider {
     width: 80%;
-    margin-top: 3vh;
-    margin-bottom: 1vh;
+    margin-top: 2.1vh;
+    margin-bottom: 2.3vh;
     border: 2px solid #84848450; 
 }
 
