--- a/src/ComponentsCSS/ContactPageCSS/ContactFormField.css
+++ b/src/ComponentsCSS/ContactPageCSS/ContactFormField.css
@@ -28,6 +28,7 @@
 .medium {
     height: 12vh;
     width: 31.2vw;
+    resize: none;
 }
 
 .left {
